--- a/src/main/resources/com/example/plantwidget_g18_gui/LegendaryMenu.fxml
+++ b/src/main/resources/com/example/plantwidget_g18_gui/LegendaryMenu.fxml
@@ -16,6 +16,21 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #61523a;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.plantwidget_g18_gui.HelloController">
    <children>
+      <ScrollPane fx:id="legendaryScrollPane" hbarPolicy="NEVER" layoutY="72.0" pannable="true" prefHeight="328.0" prefWidth="600.0">
+         <content>
+            <GridPane fx:id="legendaryGridPane" alignment="TOP_CENTER" maxWidth="-Infinity" prefWidth="590.0" vgap="50.0">
+              <columnConstraints>
+                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints maxHeight="-Infinity" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="-Infinity" vgrow="SOMETIMES" />
+              </rowConstraints>
+            </GridPane>
+         </content>
+      </ScrollPane>
       <Rectangle arcHeight="5.0" arcWidth="5.0" height="400.0" stroke="TRANSPARENT" strokeType="INSIDE" width="600.0">
          <fill>
             <LinearGradient endX="1.0" endY="1.0">
@@ -54,21 +69,6 @@
             </LinearGradient>
          </fill>
       </Rectangle>
-      <ScrollPane fx:id="legendaryScrollPane" hbarPolicy="NEVER" layoutY="72.0" opacity="0.0" prefHeight="328.0" prefWidth="600.0">
-         <content>
-            <GridPane fx:id="legendaryGridPane" alignment="TOP_CENTER" maxWidth="-Infinity" prefWidth="590.0" vgap="50.0">
-              <columnConstraints>
-                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                  <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints maxHeight="-Infinity" vgrow="SOMETIMES" />
-                  <RowConstraints maxHeight="-Infinity" vgrow="SOMETIMES" />
-              </rowConstraints>
-            </GridPane>
-         </content>
-      </ScrollPane>
       <Label layoutX="182.0" layoutY="16.0" text="Legendary Plants">
          <font>
             <Font name="Verdana Pro Cond Black" size="29.0" />
