--- a/src/main/resources/com/example/plantwidget_g18_gui/LegendaryMenu.fxml
+++ b/src/main/resources/com/example/plantwidget_g18_gui/LegendaryMenu.fxml
@@ -19,7 +19,7 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #61523a;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.plantwidget_g18_gui.HelloController">
    <children>
-      <ScrollPane fx:id="legendaryScrollPane" hbarPolicy="NEVER" layoutY="72.0" pannable="true" prefHeight="328.0" prefWidth="600.0">
+      <ScrollPane fx:id="legendaryScrollPane" hbarPolicy="NEVER" layoutY="72.0" pannable="true" prefHeight="328.0" prefWidth="600.0" style="-fx-background-color: #908641;">
          <content>
             <StackPane prefHeight="326.0" prefWidth="600.0" style="-fx-background-color: #908641;">
                <children>
