--- a/src/main/resources/com/example/plantwidget_g18_gui/SeedMenu.fxml
+++ b/src/main/resources/com/example/plantwidget_g18_gui/SeedMenu.fxml
@@ -12,6 +12,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.paint.Color?>
+<?import javafx.scene.shape.CubicCurve?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
@@ -39,6 +40,8 @@
                </opaqueInsets>
             </TextField>
          </children></Pane>
+      <CubicCurve controlX1="-53.9666748046875" controlX2="158.0333251953125" controlY1="100.0" controlY2="-73.24102783203125" endX="138.0333251953125" endY="93.75897216796875" fill="#61523a" layoutX="236.0" layoutY="317.0" startX="-249.9666748046875" startY="-271.24102783203125" stroke="BLACK" />
+      <CubicCurve controlX1="-50.0" controlX2="28.0333251953125" controlY1="-100.0" controlY2="294.75897216796875" endX="449.0" endY="351.0" fill="#61523a" layoutX="178.0" layoutY="19.0" startX="-208.9666748046875" startY="-70.24102783203125" stroke="BLACK" />
       <Pane layoutX="-114.0" layoutY="331.0" prefHeight="385.0" prefWidth="360.0" rotate="38.6" style="-fx-background-color: #61523a; -fx-background-radius: 23;" />
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#61523a" height="49.0" layoutX="172.0" layoutY="23.0" stroke="BLACK" strokeType="INSIDE" width="247.0" />
       <ImageView fx:id="imagePlantOne" disable="true" fitHeight="88.0" fitWidth="128.0" layoutX="43.0" layoutY="136.0" pickOnBounds="true" preserveRatio="true">
