plant[0] gets removed when it loses health to 0, even without watering. All gui gets removed.

--- a/src/main/resources/com/example/plantwidget_g18_gui/hello-view.fxml
+++ b/src/main/resources/com/example/plantwidget_g18_gui/hello-view.fxml
@@ -147,7 +147,7 @@
             <Image url="@../../../images/peter_pot.png" />
          </image>
       </ImageView>
-      <Label fx:id="levelPlantOne" layoutX="76.0" layoutY="19.0" />
+      <Label fx:id="levelPlantOne" layoutX="76.0" layoutY="19.0" visible="false" />
 
    </children>
    <effect>
