--- a/src/main/resources/com/example/plantwidget_g18_gui/widget-view.fxml
+++ b/src/main/resources/com/example/plantwidget_g18_gui/widget-view.fxml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressBar?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Rectangle?>
@@ -25,11 +24,6 @@
             <Font name="System Bold" size="12.0" />
          </font>
       </Button>
-      <TextField fx:id="levelPlantOne" editable="false" layoutX="33.0" prefHeight="2.0" prefWidth="88.0" promptText="Level" style="-fx-background-color: #80cd93;" styleClass="textFieldGreen" stylesheets="@cssSheets.css" text="Level X">
-         <opaqueInsets>
-            <Insets />
-         </opaqueInsets>
-      </TextField>
       <Button fx:id="waterThePlantTwo" layoutX="1.0" layoutY="145.0" mnemonicParsing="false" onAction="#waterPlantTwo" prefHeight="25.0" prefWidth="74.0" styleClass="buttonWater" stylesheets="@cssSheets.css" text="Water Plant" visible="false">
          <font>
             <Font size="11.0" />
@@ -40,5 +34,6 @@
             <Font size="11.0" />
          </font>
       </Button>
+      <Label fx:id="levelPlantOne" layoutX="61.0" layoutY="12.0" text="Label" />
    </children>
 </AnchorPane>
