--- a/src/main/resources/com/example/plantwidget_g18_gui/cssSheets.css
+++ b/src/main/resources/com/example/plantwidget_g18_gui/cssSheets.css
@@ -1,19 +1,19 @@
 .buttonLegendary
 {
     -fx-background-color: linear-gradient(to right bottom, #eaed26, #949410);
-    -fx-background-radius : 30 0 0 30;
+    -fx-background-radius : 0 0 0 0;
 }
 
 .buttonLegendary:hover
 {
 -fx-background-color: linear-gradient(to right bottom, #9a9a22, #949410);
-    -fx-background-radius : 30 0 0 30;
+    -fx-background-radius : 0 0 0 0;
 }
 
 .buttonLegendary:pressed
 {
 -fx-background-color: linear-gradient(to right bottom, #eaed26, #949410);
-    -fx-background-radius : 30 0 0 30;
+    -fx-background-radius : 0 0 0 0;
 }
 
 .button1
@@ -50,6 +50,22 @@
 -fx-background-color: linear-gradient(to right bottom, #edb0e1, #cdaac6);
     -fx-background-radius : 30 0 0 30;
 }
+.buttonMenu
+{
+-fx-background-color: linear-gradient(to right bottom, #5e4533, #5e4533);
+    -fx-background-radius : 0 30 30 0;
+}
+.buttonMenu:hover
+{
+-fx-background-color: linear-gradient(to right bottom, #522f1a, #573c23);
+    -fx-background-radius : 0 30 30 0;
+}
+.buttonMenu:pressed
+{
+-fx-background-color: linear-gradient(to right bottom, #573c23, #522f1a);
+    -fx-background-radius : 0 30 30 0;
+}
+
 .buttonWater
 {
 -fx-background-color: linear-gradient(to right bottom, #87cfdd, #3c76d3);
@@ -84,23 +100,39 @@
 -fx-background-color: linear-gradient(to right bottom, #87cfdd, #3c76d3);
     -fx-background-radius : 0 0 0 0;
 }
+.buttonExitCorner
+{
+-fx-background-color: linear-gradient(to right bottom, #da2929, #611111);
+    -fx-background-radius : 30 0 0 30;
+}
+.buttonExitCorner:hover
+{
+-fx-background-color: linear-gradient(to right bottom, #612424, #611111);
+    -fx-background-radius : 30 0 0 30;
+}
+.buttonExitCorner:pressed
+{
+-fx-background-color: linear-gradient(to right bottom, #da2929, #611111);
+    -fx-background-radius : 30 0 0 30;
+
+}
 
 .buttonExit
 {
 -fx-background-color: linear-gradient(to right bottom, #da2929, #611111);
-    -fx-background-radius : 30 0 0 30;
+    -fx-background-radius : 0 30 30 0;
 }
 
 .buttonExit:hover
 {
 -fx-background-color: linear-gradient(to right bottom, #612424, #611111);
-    -fx-background-radius : 30 0 0 30;
+    -fx-background-radius : 0 30 30 0;
 }
 
 .buttonExit:pressed
 {
 -fx-background-color: linear-gradient(to right bottom, #da2929, #611111);
-    -fx-background-radius : 30 0 0 30;
+    -fx-background-radius : 0 30 30 0;
 }
 .buttonDiscard
 {
@@ -212,19 +244,19 @@
 .buttonSettings
 {
 -fx-background-color: linear-gradient(to right bottom, #8a8a8a, #4a4a4a);
-    -fx-background-radius : 30 0 0 30;
+    -fx-background-radius : 0 0 0 0;
 }
 
 .buttonSettings:hover
 {
 -fx-background-color: linear-gradient(to right bottom, #4a4a4a, #4a4a4a);
-    -fx-background-radius : 30 0 0 30;
+    -fx-background-radius : 0 0 0 0;
 }
 
 .buttonSettings:pressed
 {
 -fx-background-color: linear-gradient(to right bottom, #8a8a8a, #4a4a4a);
-    -fx-background-radius : 30 0 0 30;
+    -fx-background-radius : 0 0 0 0;
 }
 .textFieldGreen {
     -fx-background-color: #92eaa9;
@@ -243,5 +275,8 @@
 }
 .gradientTest{
 -fx-background-color: linear-gradient(to right bottom, #858585 , #4e835b);
+}
+.menu-bar {
+    -fx-background-radius: 30 30 30 30;
 }
 
